--- a/app/views/notices/shop_employee_notices/notice_to_employees_that_active_er_is_terminated_from_shop.html.erb
+++ b/app/views/notices/shop_employee_notices/notice_to_employees_that_active_er_is_terminated_from_shop.html.erb
@@ -5,7 +5,7 @@
 <table class="total_table" border="0">
   <tbody>
   <tr>
-    <td><strong>Email notification sent to:</strong> <%= notice.primary_email %></td>
+    <td><strong>Email notification sent to</strong>: <%= notice.primary_email %></td>
   </tr>
   </tbody>
 </table>
@@ -41,7 +41,7 @@
     { content: "If you are enrolled in <strong>#{notice.employer_name}</strong>’s health coverage, you may be eligible for a Special Enrollment Period (SEP), during which you can purchase coverage for yourself and your family members through #{Settings.site.short_name}’s individual marketplace. You may also be eligible for premium subsidies and other forms of financial assistance if you are unable to afford the full cost of health insurance. \n"} %>
 
 <%= render partial: 'notices/shared/paragraph', :locals =>
-    { content: "You can report your loss of coverage to enroll through a Special Enrollment Period up to 60 days prior to the date of the loss of coverage and must report it no later than 60 days after the loss of coverage, <strong>#{notice.plan_year.group_lost_on}</strong>. To assure continued coverage, you need to enroll during this Special Enrollment Period. If you do not enroll during this time, you may have to wait until the next individual marketplace Open Enrollment Period, which begins on November 1st of each year. Please log into your #{Settings.site.short_name} account and complete an eligibility application for individual marketplace coverage to view health plan options available to you and to learn whether you qualify for financial assistance. \n"} %>
+    { content: "You can report your loss of coverage to enroll through a Special Enrollment Period up to 60 days prior to the date of the loss of coverage and must report it no later than 60 days after the loss of coverage, <strong>#{notice.plan_year.group_lost_on}</strong>. To assure continued coverage, you need to enroll during this Special Enrollment Period. If you do not enroll during this time, you may have to wait until the next Open Enrollment Period from <strong>#{notice.enrollment.ivl_open_enrollment_start_on}</strong> through <strong>#{notice.enrollment.ivl_open_enrollment_end_on}</strong>. Please log into your #{Settings.site.short_name} account and complete an eligibility application for individual marketplace coverage to view health plan options available to you and to learn whether you qualify for financial assistance. \n"} %>
 
 <%= render partial: 'notices/shared/paragraph', :locals =>
     { content: "If you are not a resident of the #{Settings.aca.state_name}, you should contact the Health Insurance Marketplace located in your state of residence to inquire about eligibility for a Special Enrollment Period and premium assistance programs. To find the Health Insurance Marketplace in your state, go to <a href=#{Settings.site.healthcare_url}>#{Settings.site.healthcare_name}</a>.\n"} %>
