--- a/app/views/notices/shop_employee_notices/notice_to_employees_that_active_er_is_terminated_from_shop.html.erb
+++ b/app/views/notices/shop_employee_notices/notice_to_employees_that_active_er_is_terminated_from_shop.html.erb
@@ -5,7 +5,7 @@
 <table class="total_table" border="0">
   <tbody>
   <tr>
-    <td><strong>Email notification sent to</strong>: <%= notice.primary_email %></td>
+    <td>Email notification sent to: <%= notice.primary_email %></td>
   </tr>
   </tbody>
 </table>
@@ -23,7 +23,7 @@
 <table class="total_table" border="0">
   <tbody>
   <tr>
-    <td>Dear <strong><%= notice.primary_fullname %></strong>,</td>
+    <td>Dear <strong><%= notice.primary_fullname %></strong>:</td>
   </tr>
   </tbody>
 </table>
@@ -33,21 +33,23 @@
 
 <%= render partial: 'notices/shared/paragraph', :locals =>
     { content: "<strong>Health coverage for you, and any of your enrolled family members, will end on #{notice.plan_year.terminated_on}. </strong>"} %>
+
 <br>
+
 <%= render partial: 'notices/shared/paragraph_with_headers', :locals =>
     { contents: [""], heading: 'You May be Eligible for Other Coverage', sub_heading: ''} %>
 
 <%= render partial: 'notices/shared/paragraph', :locals =>
-    { content: "If you are enrolled in <strong>#{notice.employer_name}</strong>’s health coverage, you may be eligible for a Special Enrollment Period (SEP), during which you can purchase coverage for yourself and your family members through #{Settings.site.short_name}’s individual marketplace. You may also be eligible for premium subsidies and other forms of financial assistance if you are unable to afford the full cost of health insurance. \n"} %>
+    { content: "If you are enrolled in <strong>#{notice.employer_name}</strong>’s health coverage, you may be eligible for a Special Enrollment Period (SEP), during which you can purchase coverage for yourself and your family members  through the #{Settings.site.short_name}’s individual marketplace.  You may also be eligible for premium subsidies and other forms of financial assistance if you are unable to afford the full cost of health insurance. \n"} %>
 
 <%= render partial: 'notices/shared/paragraph', :locals =>
-    { content: "You can report your loss of coverage to enroll through a Special Enrollment Period up to 60 days prior to the date of the loss of coverage and must report it no later than 60 days after the loss of coverage, <strong>#{notice.plan_year.group_lost_on}</strong>. To assure continued coverage, you need to enroll during this Special Enrollment Period. If you do not enroll during this time, you may have to wait until the next Open Enrollment Period from <strong>#{notice.enrollment.ivl_open_enrollment_start_on}</strong> through <strong>#{notice.enrollment.ivl_open_enrollment_end_on}</strong>. Please log into your #{Settings.site.short_name} account and complete an eligibility application for individual marketplace coverage to view health plan options available to you and to learn whether you qualify for financial assistance. \n"} %>
+    { content: "You can report your loss of coverage to enroll through a Special Enrollment Period up to 60 days prior to the date of the loss of coverage and must report it no later than 60 days after the loss of coverage, <strong>#{notice.plan_year.group_lost_on}</strong>. To assure continued coverage, you need to enroll during this Special Enrollment Period. If you do not enroll during this time, you may have to wait until the next Open Enrollment Period from <strong>#{notice.enrollment.ivl_open_enrollment_start_on}</strong> through <strong>#{notice.enrollment.ivl_open_enrollment_end_on}</strong>. Please into your #{Settings.site.short_name} account and complete an eligibility application for individual marketplace coverage to view health plan options available to you and to learn whether you qualify for financial assistance. \n"} %>
 
 <%= render partial: 'notices/shared/paragraph', :locals =>
     { content: "If you are not a resident of the #{Settings.aca.state_name}, you should contact the Health Insurance Marketplace located in your state of residence to inquire about eligibility for a Special Enrollment Period and premium assistance programs. To find the Health Insurance Marketplace in your state, go to <a href=#{Settings.site.healthcare_url}>#{Settings.site.healthcare_name}</a>.\n"} %>
 
 <%= render partial: 'notices/shared/paragraph', :locals =>
-    { content: "If you are eligible to participate in another employer's plan, contact that employer promptly to enroll. While you may generally have a 60-day Special Enrollment Period to enroll in individual market through the #{Settings.site.short_name} coverage, you typically only have a 30-day Special Enrollment Period to enroll in another employer’s group health plan. "} %>
+    { content: "If you are eligible to participate in another employer's plan, contact that employer promptly to enroll.  While you may have a 60-day Special Enrollment Period to enroll in individual market coverage through the #{Settings.site.short_name} coverage, you typically only have a 30-day Special Enrollment Period to enroll in another employer’s group health plan. "} %>
 
 <br>
 
@@ -56,7 +58,8 @@
 
 <% if notice.broker.present? %>
 <%= render partial: 'notices/shared/paragraph', locals: {
-    content: "Contact your employer or your broker for further assistance."} %>
+    content: "Please contact your broker for further assistance."} %>
+
 <% else %>
     <%= render partial: 'notices/shared/paragraph', locals: {
         content: "Contact your employer for further assistance."} %>
@@ -66,7 +69,7 @@
     content: "You can also contact #{Settings.site.short_name} with any questions:"} %>
 
 <%= render partial: 'notices/shared/unordered_list', :locals => { listings:
-                                                                      ["By calling #{notice.hbe.phone}",
+                                                                      ["By calling #{notice.hbe.phone}.",
                                                                        "TTY: #{Settings.contact_center.tty}",
                                                                        "Online at <a href=#{Settings.site.home_url}>#{Settings.site.website_name}</a>"]} %>
 
