--- a/app/views/shared/_my_portal_links.html.erb
+++ b/app/views/shared/_my_portal_links.html.erb
@@ -13,19 +13,19 @@
       <% if current_user.hints == true %>
         <li>
           <i class="fa fa-question-circle fa-3x text-center" aria-hidden="true" style="display: block;"></i>
-          <h3 class="darkblue no-buffer text-center">Did You Know?</h3>
+          <h3 class="darkblue no-buffer text-center"><%= l10n('.did_you_know')%></h3>
             <div class="panel panel-default">
-              <div class="panel-body">You can move between your insured, employer, broker accounts using this My Portals link.</div>
+              <div class="panel-body"><%= l10n('.portals_helpers_message')%></div>
             </div>
         </li>
       <% end %>
       <% if insured %>
-        <li><%= link_to "My Insured Portal", family_account_path(tab: 'home'), class: 'header-text' %></li>
-        <li><%= link_to "Add Consumer Role", build_insured_consumer_role_index_path, method: :post, class: 'header-text' unless current_user.try(:has_consumer_role?)%></li>
+        <li><%= link_to l10n('.my_insured_portal'), family_account_path(tab: 'home'), class: 'header-text' %></li>
+        <li><%= link_to l10n('.add_consumer_role'), build_insured_consumer_role_index_path, method: :post, class: 'header-text' unless current_user.try(:has_consumer_role?)%></li>
       <% end %>
       <% if employer_staff.present? %>
-        <li><%= link_to "Add Employee Role", search_insured_employee_index_path, class: 'header-text' if portal_count == 1 %></li>
-        <li><%= link_to "Add Consumer Role", search_insured_consumer_role_index_path, class: 'header-text' if portal_count == 1%></li>
+        <li><%= link_to l10n('.add_employee_role'), search_insured_employee_index_path, class: 'header-text' if portal_count == 1 %></li>
+        <li><%= link_to l10n('.add_consumer_role'), search_insured_consumer_role_index_path, class: 'header-text' if portal_count == 1%></li>
         <% employer_staff.each do |employer_staff_role|  %>
           <% id = employer_staff_role.employer_profile_id %>
             <% employer = EmployerProfile.find(id) %>
@@ -33,12 +33,12 @@
         <% end %>
       <% end %>
       <% if broker %>
-        <li><%= link_to "My Broker Agency Portal", broker_agencies_root_path, class: 'header-text' %></li>
-        <li><%= link_to "Add Consumer Role", search_insured_consumer_role_index_path, class: 'header-text' if portal_count == 1 %></li>
+        <li><%= link_to l10n('.my_broker_agency_portal'), broker_agencies_root_path, class: 'header-text' %></li>
+        <li><%= link_to l10n('.add_consumer_role'), search_insured_consumer_role_index_path, class: 'header-text' if portal_count == 1 %></li>
       <% end %>
       <% if general_agency %>
-        <li><%= link_to "My General Agency Portal", general_agencies_root_path, class: 'header-text' %></li>
-        <li><%= link_to "Add Consumer Role", search_insured_consumer_role_index_path, class: 'header-text' unless portal_count == 1%></li>
+        <li><%= link_to l10n('.my_general_agency_portal'), general_agencies_root_path, class: 'header-text' %></li>
+        <li><%= link_to l10n('.add_consumer_role'), search_insured_consumer_role_index_path, class: 'header-text' unless portal_count == 1%></li>
       <% end %>
     </ul>
     <span> | </span>
