Refs #37920 Text Change to Pop-Up Modal in EA Plan Shopping

--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -26,16 +26,10 @@
            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
            <hr>
           </div> 
-          <div style="margin-left:20px;">
+          <div style="text-align: center;">
+            <p><%= l10n("modal_onscreen") %></p>
             <p><%= l10n("modal_onscreen1") %></p>
             <p><%= l10n("modal_onscreen2") %></p>
-            <p><%= l10n("modal_onscreen3") %></p>
-            <p><%= l10n("modal_onscreen4") %></p>
-            <p><%= l10n("modal_onscreen5") %></p>
-            <p><%= l10n("modal_onscreen6") %></p>
-            <p><%= l10n("modal_onscreen7") %></p>
-            <p><%= l10n("modal_onscreen8") %></p>
-            <p><%= l10n("modal_onscreen9") %></p>
           </div>
           <div class="modal-footer" style="margin-right:190px">
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
@@ -58,16 +52,10 @@
            <hr>
           </div> 
            <div style="text-align: center;">
+            <p><%= l10n("modal_onscreen") %></p>
             <p><%= l10n("modal_onscreen1") %></p>
             <p><%= l10n("modal_onscreen2") %></p>
-            <p><%= l10n("modal_onscreen3") %></p>
-            <p><%= l10n("modal_onscreen4") %></p>
-            <p><%= l10n("modal_onscreen5") %></p>
-            <p><%= l10n("modal_onscreen6") %></p>
-            <p><%= l10n("modal_onscreen7") %></p>
-            <p><%= l10n("modal_onscreen8") %></p>
-            <p><%= l10n("modal_onscreen9") %></p>
-          </div>
+           </div>
           <div class="modal-footer" style="margin-right:190px">
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
             <%=link_to l10n("confirm") , 'https://dc.checkbookhealth.org/dc/', class: "btn btn-primary  mtz", target: '_blank'  %>
