Refs #37920 add chnages for find your doctor

--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -49,16 +49,15 @@
   <div class="modal fade" id="plan_match_family" tabindex="-1" role="dialog" role="document">
     <div class="modal-dialog">
        <div class="modal-content">
-          <div class="modal-header" style="border-bottom:none">
+          <div class="modal-header" style="height:50px">
            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-           <hr>
           </div>
            <div style="margin-left:20px;">
-            <p><%= l10n("modal_onscreen") %></p>
-            <p><%= l10n("modal_onscreen1") %></p>
-            <p><%= l10n("modal_onscreen2") %></p>
+            <p style="margin-bottom:0px"><%= l10n("modal_onscreen") %></p>
+            <p style="margin-bottom:0px"><%= l10n("modal_onscreen1") %></p>
+            <p style="margin-bottom:0px"><%= l10n("modal_onscreen2") %></p>
            </div>
-          <div class="modal-footer">
+          <div class="modal-footer" style="padding:10px">
             <center>
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
             <%=link_to l10n("confirm") , 'https://dc.checkbookhealth.org/dc/', class: "btn btn-primary  mtz", target: '_blank'  %>
