--- a/app/views/insured/group_selection/new.html.erb
+++ b/app/views/insured/group_selection/new.html.erb
@@ -20,7 +20,7 @@
           <%= hidden_field_tag(:enrollment_kind, @enrollment_kind) %>
           <%= hidden_field_tag(:hbx_enrollment_id, @hbx_enrollment.id) if @hbx_enrollment.present? %>
 
-          <% if @adapter.can_shop_shop?(@person) || @adapter.can_shop_individual?(@person) || @adapter.can_shop_resident?(@person) %>
+          <% if @adapter.can_shop_shop?(@person) || true || @adapter.can_shop_resident?(@person) %>
             <div id="coverage-household" class='row no-buffer'>
               <div class="module group-selection-table">
                 <div class="table-responsive table-border" style="background-color: #fff">
