--- a/app/views/insured/interactive_identity_verifications/failed_validation.html.haml
+++ b/app/views/insured/interactive_identity_verifications/failed_validation.html.haml
@@ -1,30 +1,28 @@
 .content
   .container
-    .row
-      .col-lg-7.col-md-7.col-sm-8.col-xs-12
-        - if @step == 'start'
-          %h4 Your identity could not be confirmed by Experian – the third-party service we use to verify your identity
-          - if aca_state_abbreviation == "DC"
-            = render partial: 'insured/interactive_identity_verifications/options_to_verify_identity'
+    .col-xs-9
+      - if @step == 'start'
+        %h4 Your identity could not be confirmed by Experian – the third-party service we use to verify your identity
+        - if aca_state_abbreviation == "DC"
+          = render partial: 'insured/interactive_identity_verifications/options_to_verify_identity'
+      - else
+        %br/
+        - if aca_state_abbreviation == "DC"
+          = render partial: 'notices/shared/unordered_list', locals: { previous: "Your identity could not be confirmed by Experian – the third-party service we use to verify your identity. For your security, you won’t be able to continue your application until you resolve this issue. Follow these steps:", listings: ["Call Experian at (866) 578-5409", "Provide your reference number:  #{ @verification_transaction_id} ", "Experian will need to ask you a few questions to verify your identity"] }
+          %p If you are able to resolve the issue with Experian, select CONTINUE APPLICATION.
+          %p= link_to('insured.interactive_identity_verifications.failed_validation.override', insured_interactive_identity_verification_path(:id => @verification_transaction_id), :method => :put, :class => "btn btn-primary  btn-small interaction-click-control-override-identity-verification" + pundit_class(Family, :updateable?))
+          = render partial: 'insured/interactive_identity_verifications/options_to_verify_identity'
+          .btn.btn-default.hidden{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal"}
+          =l10n("help_me_sign_up")
         - else
-          %br
-          - if aca_state_abbreviation == "DC"
-            = render partial: 'notices/shared/unordered_list', locals: { previous: "Your identity could not be confirmed by Experian – the third-party service we use to verify your identity. For your security, you won’t be able to continue your application until you resolve this issue. Follow these steps:", listings: ["Call Experian at (866) 578-5409", "Provide your reference number:  #{ @verification_transaction_id} ", "Experian will need to ask you a few questions to verify your identity"] }
-            %p If you are able to resolve the issue with Experian, select CONTINUE APPLICATION.
-            %p= link_to(t('insured.interactive_identity_verifications.failed_validation.override'), insured_interactive_identity_verification_path(:id => @verification_transaction_id), :method => :put, :class => "btn btn-primary  btn-small interaction-click-control-override-identity-verification" + pundit_class(Family, :updateable?))
-            = render partial: 'insured/interactive_identity_verifications/options_to_verify_identity'
-            .btn.btn-default.hidden{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal"}
-            =l10n("help_me_sign_up")
-          - else
-             %h4= t('insured.interactive_identity_verifications.failed_validation.contact_information', :ref_number => @verification_response.transaction_id)
-             .btn.btn-default{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal"}
-             =l10n("help_me_sign_up")
+          %h4= t('insured.interactive_identity_verifications.failed_validation.contact_information', :ref_number => @verification_transaction_id)
+          .btn.btn-default{"data-target" => "#help_with_plan_shopping", "data-toggle" => "modal"}
+          =l10n("help_me_sign_up")
         %br
-          = render partial: 'insured/plan_shoppings/help_with_plan'
+          = render partial: 'ui-components/v1/modals/help_with_plan'
           = render partial: 'shared/application_types_list'
-        - if individual_market_is_enabled?
-        .outstanding-ridp-documents
-          = render partial: 'insured/interactive_identity_verifications/outstanding_ridp_documents'
-      - if individual_market_is_enabled?
-      .col-lg-3.col-md-3.col-sm-3.col-xs-12.col-md-offset-2.col-sm-offset-1.right-section
-        = render  partial: 'shared/individual_progress', locals: {ridp:true, step: '2', next_link: ridp_redirection_link(@person).present? ? ridp_redirection_link(@person) : insured_family_members_path(consumer_role_id: @person.consumer_role.id), identity_verified: @person.consumer_role.identity_verified?, application_verified: @person.consumer_role.application_verified?}
+          - if individual_market_is_enabled?
+            .outstanding-ridp-documents
+            = render partial: 'insured/interactive_identity_verifications/outstanding_ridp_documents'
+            .col-lg-3.col-md-3.col-sm-3.col-xs-12.col-md-offset-2.col-sm-offset-1.right-section
+            = render partial: 'shared/individual_progress', locals: {ridp:true, step: '2', next_link: ridp_redirection_link(@person).present? ? ridp_redirection_link(@person) : insured_family_members_path(consumer_role_id: @person.consumer_role.id), identity_verified: @person.consumer_role.identity_verified?, application_verified: @person.consumer_role.application_verified?}
