Ref38789: Adding Spec File

--- a/app/views/employers/employer_profiles/_open_enrollment_ends_panel.html.erb
+++ b/app/views/employers/employer_profiles/_open_enrollment_ends_panel.html.erb
@@ -23,7 +23,7 @@
     <div class="text-left">
       <h3 class="no-buffer">
         <strong>
-\          Until Open Enrollment Ends
+          Until Open Enrollment Ends
         </strong>
       </h3>
       <span><%= @current_plan_year.open_enrollment_end_on.to_date.to_formatted_s :long_ordinal %></span>
