--- a/app/views/notices/ivl/ivl_tax_cover_letter_notice.html.erb
+++ b/app/views/notices/ivl/ivl_tax_cover_letter_notice.html.erb
@@ -137,7 +137,7 @@
 content: "This letter includes your tax Form 1095-A. You’re receiving this tax form because you or someone in your household enrolled in a private health insurance plan through #{Settings.site.short_name} in #{previous_year}."} %>
 
 <%= render partial: 'notices/shared/paragraph', :locals => {
-content: "Federal law requires most Americans to have a minimum level of health coverage. This requirement is known as the individual mandate, and it’s still in effect for the #{previous_year} and #{previous_year + 1} tax years. Your enrollment in a private health insurance plan meets this requirement. We report your enrollment status each month to the Internal Revenue Service (IRS).  These reports allow the IRS to verify the months that you were enrolled in coverage through #{Settings.site.short_name}."} %>
+content: "Federal law required most Americans to have a minimum level of health coverage or pay a tax penalty through #{previous_year}. The #{Settings.aca.state_name} now has an individual responsibility requirement. This means that DC residents must have qualifying health coverage all year. If you don't have coverage, and don't qualify for an exemption, you’ll have to pay a penalty when you file your DC taxes. For more information: <a href= #{Settings.site.ivl_responsibility_url}>https://dchealthlink.com/individual-responsibility-requirement. </a>"} %>
 
 <%= render partial: 'notices/shared/paragraph', :locals => {
 content: "We are required by federal law to send a copy of your Form 1095-A to you and the Internal Revenue Service (IRS). You may need this form to complete your federal tax return for #{previous_year}. Please keep it for your records.  You can also download a copy of your tax form at <a href=#{Settings.site.home_url}>#{notice.hbe.short_url}</a>."} %>
@@ -184,7 +184,7 @@ content: "We are required by federal law to send a copy of your Form 1095-A to y
   <% if !notice.is_an_aqhp_cover_letter %>
     <%= render partial: 'notices/shared/unordered_list', locals: {
     previous: "IRS Form 1095-A has three sections:",
-    listings: ["<strong>Part I</strong> includes information about the primary recipient. Your spouse’s information is not listed because you didn’t receive an advance premium tax credit, and the IRS tells us not to include their information here. Part I also lists when your health insurance started and ended.<br>", "<strong>Part II</strong> shows everyone in your household who was enrolled in the plan. It lists the date(s) that each person’s coverage started and ended.",["<strong>Part III</strong> lists information about each month that you, or members of your household had health insurance:", ["Column A shows the amount of your monthly premium. The premium amount you see here may be a few dollars lower than what you paid each month because the IRS asks us not to include the part of your premium that went to pay for benefits not required by the Affordable Care Act.", "Column B shows the cost of the Second Lowest Cost Silver Plan for any months you received tax credit savings. If this column is blank, and you would like to claim the premium tax credit on your taxes, you can use the Second Lowest Cost Silver Plan calculator at <a href=#{Settings.site.home_url}>#{notice.hbe.short_url}</a> to find out what to enter for this column.", "Column C shows the amount of any tax credit paid directly to your health insurance company each month."]]]} %>
+    listings: ["<strong>Part I</strong> includes information about the primary recipient. Your spouse’s information is not listed because you didn’t receive an advance premium tax credit, and the IRS tells us not to include their information here. Part I also lists when your health insurance started and ended.<br>", "<strong>Part II</strong> shows everyone in your household who was enrolled in the plan. It lists the date(s) that each person’s coverage started and ended.",["<strong>Part III</strong> lists information about each month that you or members of your household had health insurance:", ["Column A shows the amount of your monthly premium. The premium amount you see here may be a few dollars lower than what you paid each month because the IRS asks us not to include the part of your premium that went to pay for benefits not required by the Affordable Care Act.", "Column B shows the cost of the Second Lowest Cost Silver Plan for any months you received tax credit savings. If this column is blank, and you would like to claim the premium tax credit on your taxes, you can use the Second Lowest Cost Silver Plan calculator at <a href=#{Settings.site.home_url}>#{notice.hbe.short_url}</a> to find out what to enter for this column.", "Column C shows the amount of any tax credit paid directly to your health insurance company each month."]]]} %>
   <% else %>
     <%= render partial: 'notices/shared/unordered_list', locals: {
     previous: "IRS Form 1095-A has three sections:",
@@ -202,13 +202,13 @@ content: "We are required by federal law to send a copy of your Form 1095-A to y
 
 <%= render partial: 'notices/shared/paragraph_with_headers_for_ivl', :locals => {
  contents: ["The information on your Form 1095-A is based on records provided by your health insurance company and DC Health Link. If you believe the information on your Form 1095-A is not accurate, please go to the tax information section at <a href=#{Settings.site.home_url}>#{notice.hbe.short_url}</a> for information on how to request a corrected Form 1095-A, or call us at #{notice.hbe.phone}."],
-   heading: 'If You Think We Made a Mistake', sub_heading: '', top_margin: '12px'} %>
+   heading: 'If You Think This Form is Wrong', sub_heading: '', top_margin: '12px'} %>
 
 <%= render partial: 'notices/shared/paragraph', :locals => {
 content: "#{Settings.site.short_name} does not control the individual mandate and cannot provide tax advice. For more information on these topics, consult a tax adviser or the IRS website at <a href=#{Settings.site.irs_url}>IRS.gov</a>."} %>
 
 <%= render partial: 'notices/shared/paragraph_with_headers', :locals => {
- contents: ["Go to <a href=#{Settings.site.home_url}>#{notice.hbe.short_url}</a>, or call us at #{notice.hbe.phone}."],
+ contents: ["Go to <a href=#{Settings.site.home_url}>#{notice.hbe.short_url}</a>, or call us at #{notice.hbe.phone}. #{Settings.site.short_name} cannot provide tax advice. For more information on these topics, consult a tax adviser."],
    heading: 'Still Have Questions?', sub_heading: '', top_margin: '8px', bottom_margin: '8px'} %>
 
 <div style="page-break-inside: avoid;">
@@ -221,6 +221,7 @@ content: "#{Settings.site.short_name} does not control the individual mandate an
 
 <%= render partial: 'notices/shared/reference_paragraph', :locals => {
 contents: ["<strong>Legal Reference:</strong> The following laws, regulations and rules apply to this letter:",
-"Individual mandate: 26 U.S.C. §5000A",
+"DC individual mandate: DC Official Code §47-5102(a)",
+"Federal individual mandate: 26 U.S.C. §5000A",
 "Exchange requirement to send 1095-A: 26 U.S.C. §36B(f); 26 C.F.R. §1-36B-5",
 "Requirement to reconcile advance premium tax credit: 26 C.F.R. §1-36B-4"]} %>
