--- a/app/views/notices/ivl/final_catastrophic_plan_letter.html.erb
+++ b/app/views/notices/ivl/final_catastrophic_plan_letter.html.erb
@@ -46,5 +46,6 @@ content: "You may receive a tax form from your health insurance company.  Health
 
 <%= render partial: 'notices/shared/reference_paragraph', :locals => {
 contents: ["<strong>Legal Reference:</strong> The following laws, regulations and rules apply to this letter:",
-"Individual mandate: 26 U.S.C. §5000A",
+"DC individual mandate: DC Official Code §47-5102(a)",
+"Federal Individual mandate: 26 U.S.C. §5000A",
 "Catastrophic plan ineligibility for advance premium tax credit: 26 U.S.C. §36B(c)(3)(A)"]} %>
