--- a/app/views/broker_agencies/broker_roles/_existing_broker_agency_form.html.erb
+++ b/app/views/broker_agencies/broker_roles/_existing_broker_agency_form.html.erb
@@ -49,7 +49,7 @@
         <div class="row no-buffer">
           <div class="col-md-4 col-sm-4 col-xs-12 form-group-lg no-pd">
             <button type="submit" class
-            ="btn btn-primary"><%= l10n("submit_application")%></button>
+            ="btn btn-primary" id="broker-staff-btn" disabled='disabled'><%= l10n("submit_application")%></button>
           </div>
         </div>
       </div>
