--- a/app/views/exchanges/hbx_profiles/_edit_force_publish.html.erb
+++ b/app/views/exchanges/hbx_profiles/_edit_force_publish.html.erb
@@ -19,12 +19,13 @@
       </thead>
       <tbody>
         <tr>
+          <% plan_year = @organization.employer_profile.draft_plan_year.last %>
           <td><%= "Initial" %></td>
-          <td><%= @organization.employer_profile.latest_plan_year.start_on.strftime('%m/%d/%Y') %></td>
-          <td><%= @organization.employer_profile.plan_years.first.open_enrollment_end_on.strftime('%m/%d/%Y') %></td>
-          <td><%= @organization.employer_profile.latest_plan_year.aasm_state %></td>
-          <td><%= TimeKeeper.local_time(@organization.employer_profile.plan_years.first.created_at).strftime('%m/%d/%Y %I:%M%p') %></td>
-          <td><%= TimeKeeper.local_time(@organization.employer_profile.plan_years.first.updated_at).strftime('%m/%d/%Y %I:%M%p') %></td>
+          <td><%= plan_year.start_on.strftime('%m/%d/%Y') %></td>
+          <td><%= plan_year.open_enrollment_end_on.strftime('%m/%d/%Y') %></td>
+          <td><%= plan_year.aasm_state %></td>
+          <td><%= TimeKeeper.local_time(plan_year.created_at).strftime('%m/%d/%Y %I:%M%p') %></td>
+          <td><%= TimeKeeper.local_time(plan_year.updated_at).strftime('%m/%d/%Y %I:%M%p') %></td>
         </tr>
       </tbody>
     </table>
@@ -36,4 +37,4 @@
     </div>
   </div>
 </div>
-<%= render "exchanges/hbx_profiles/force_publish_modal", plan_year: @organization.employer_profile.latest_plan_year %>
+<%= render "exchanges/hbx_profiles/force_publish_modal", plan_year: plan_year %>
