refs#33619 Add new text to renewal notice

--- a/app/views/notices/shop_employer_notices/5_employer_renewal_notice.html.erb
+++ b/app/views/notices/shop_employer_notices/5_employer_renewal_notice.html.erb
@@ -33,6 +33,37 @@
   content: "Your employees will also have until #{notice.plan_year.start_on.last_month.strftime("%m/#{Settings.aca.shop_market.renewal_application.monthly_open_enrollment_end_on}/%Y")} to make their plan selections."} %>
 <br>
 
+<%= render partial: 'notices/shared/paragraph', :locals => {
+  content: "<strong>Continued Eligibility</strong> <br> Your group must continue to meet the eligibility requirements to renew your coverage though <%= Settings.site.short_name %>.  To be eligible to renew your employer-sponsored health coverage with #{Settings.site.short_name}:"} %>
+
+<table class="total_table" border="0">
+  <tbody>
+    <tr>
+      <td>
+        <ul style="list-style: circle solid;">
+        <li style="margin-top: 0px;">
+          Your group must continue to meet residency requirements:
+          <ul>
+            <li>
+              Have your principal business address in the #{Settings.aca.state_name} and offer coverage to all full-time employees through #{Settings.site.short_name}, OR
+            </li>
+            <li>
+              Continue to offer coverage through #{Settings.site.short_name} to all full-time employees whose primary worksite is located in the #{Settings.aca.state_name} and offer coverage to non-DC based employees through the SHOP exchange serving their primary worksite(s)
+            </li>
+          </ul>
+        </li>
+        <li style="margin-top: 5px;">
+          At least two-thirds of your eligible employees need to enroll in your group health coverage or waive due to having other coverage.
+        </li>
+        <li style="margin-top: 5px;">
+          One non-owner employee enrolls in health coverage.
+        </li>
+        </ul>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
 <%= render partial: 'notices/shared/unordered_list', locals: {
     previous: "Employer Renewal Process:",
     listings: [
