--- a/app/views/employers/employer_profiles/my_account/accounts/_pay_my_bill.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_pay_my_bill.html.erb
@@ -25,12 +25,12 @@
         <%= link_to 'How to Pay Online - Instructions', asset_path("pdf/employers_paying_your_premiums_online.pdf") , target: "_blank"%>
       </div>
     </li>
-    <li>Pay by Phone <i class="fa fa-info-circle" data-toggle="tooltip" data-placement="right" title="SLOWEST payment option- up to 2 weeks processing"></i>
+    <li>Pay by Phone
       <div class="row col-md-offset-1">
         <%=  Settings.contact_center.alt_phone_number %>, select "Small Business Employer" then "Make a Payment"
       </div>
     </li>
-    <li>Pay by Mail
+    <li>Pay by Mail <i class="fa fa-info-circle" data-toggle="tooltip" data-placement="right" title="SLOWEST payment option- up to 2 weeks processing"></i>
       <div class="row col-md-offset-1">
         <%= Settings.site.short_name %>
       </div>
