--- a/app/views/employers/employer_profiles/my_account/accounts/_payment_history.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_payment_history.html.erb
@@ -1,5 +1,5 @@
 <div id="payments-table">
-  <h4><strong>Payment History</strong> <i class="fa fa-info-circle" data-toggle="tooltip" data-placement="right" title="Payments made within the past year are displayed below.  If you have questions about payments made more than a year ago, please contact customer service."></i>
+  <h4><strong>Payment History</strong> <i class="fa fa-info-circle" data-toggle="tooltip" data-placement="right" title="All previous payments are displayed below."></i>
   </h4>
   <% if @wf_url %>
     <p>
