refs#39467 Adding specs fixes & UI defects

--- a/app/views/exchanges/hbx_profiles/_new_plan_year.html.slim
+++ b/app/views/exchanges/hbx_profiles/_new_plan_year.html.slim
@@ -3,7 +3,7 @@
   br
   .row
     .pull-right[style="margin-right:20px"]
-      i.fas.fa-times.fa-2x.admin-fa-times#closeBAForm[onclick="closeRow(this)"]
+      i.fa.fa-times.fa-lg[onclick="closeRow(this)"]
   .row
     .col-md-4
       label[for="effectiveStartDate" style="font-weight:bold"]
