--- a/app/views/exchanges/hbx_profiles/_edit_force_publish.html.erb
+++ b/app/views/exchanges/hbx_profiles/_edit_force_publish.html.erb
@@ -6,35 +6,37 @@
       </a>
     </div>
     <h4 class="text-center heading-text"> <%= l10n("hbx_profiles.publish_application") %> </h4>
-    <table class = "table" style="table-layout: fixed;">
-      <thead>
-        <tr>
-          <th><%= l10n("hbx_profiles.application_type")%></th>
-          <th><%= l10n("hbx_profiles.effective_date")%></th>
-          <th><%= l10n("hbx_profiles.oe_end_date")%></th>
-          <th><%= l10n("hbx_profiles.application_status")%></th>
-          <th><%= l10n("hbx_profiles.submitted_at")%></th>
-          <th><%= l10n("hbx_profiles.last_updated_at")%></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <% plan_year = @organization.employer_profile.draft_plan_year.last %>
-          <td><%= "Initial" %></td>
-          <td><%= plan_year.start_on.strftime('%m/%d/%Y') %></td>
-          <td><%= plan_year.open_enrollment_end_on.strftime('%m/%d/%Y') %></td>
-          <td><%= plan_year.aasm_state %></td>
-          <td><%= TimeKeeper.local_time(plan_year.created_at).strftime('%m/%d/%Y %I:%M%p') %></td>
-          <td><%= TimeKeeper.local_time(plan_year.updated_at).strftime('%m/%d/%Y %I:%M%p') %></td>
-        </tr>
-      </tbody>
-    </table>
-    <div class="row no-buffer child-row">
-      <div class="col-md-12 no-pd col-sm-12 col-xs-12 top-buffer text-center">
-        <span class="btn btn-default" onclick="$('tr.child-row:visible').remove();"> <%= l10n(".cancel") %> </span>
-        <%= submit_tag l10n('.submit'), :class => "btn btn-primary", :onclick => "$('#forcePublishPlanYear').modal('show');", :remote => true, :size => '100px' %>
+    <%= form_tag force_publish_exchanges_hbx_profiles_path(row_actions_id: "family_actions_#{@organization.id.to_s}", publish_with_warnings: false), :method => :post, :remote => true do %>
+      <table class = "table" style="table-layout: fixed;">
+        <thead>
+          <tr>
+            <th><%= l10n("hbx_profiles.application_type")%></th>
+            <th><%= l10n("hbx_profiles.effective_date")%></th>
+            <th><%= l10n("hbx_profiles.oe_end_date")%></th>
+            <th><%= l10n("hbx_profiles.application_status")%></th>
+            <th><%= l10n("hbx_profiles.submitted_at")%></th>
+            <th><%= l10n("hbx_profiles.last_updated_at")%></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <% @employer_profile = @organization.employer_profile %>
+            <td><%= "Initial" %></td>
+            <td><%= @plan_year.start_on.strftime('%m/%d/%Y') %></td>
+            <td><%= @plan_year.open_enrollment_end_on.strftime('%m/%d/%Y') %></td>
+            <td><%= @plan_year.aasm_state %></td>
+            <td><%= TimeKeeper.local_time(@plan_year.created_at).strftime('%m/%d/%Y %I:%M%p') %></td>
+            <td><%= TimeKeeper.local_time(@plan_year.updated_at).strftime('%m/%d/%Y %I:%M%p') %></td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row no-buffer child-row">
+        <div class="col-md-12 no-pd col-sm-12 col-xs-12 top-buffer text-center">
+          <span class="btn btn-default" onclick="$('tr.child-row:visible').remove();"> <%= l10n(".cancel") %> </span>
+          <%= submit_tag l10n('.submit'), :class => "btn btn-primary", :remote => true, :size => '100px' %>
+        </div>
       </div>
-    </div>
+      <%= render "employers/plan_years/publish_modal", plan_year: @plan_year, admin_override: true, publish_url: force_publish_exchanges_hbx_profiles_path(row_actions_id: "family_actions_#{@organization.id.to_s}", publish_with_warnings: true) %>
+    <% end %>
   </div>
 </div>
-<%= render "exchanges/hbx_profiles/force_publish_modal", plan_year: plan_year %>
