refs#39457 Add UI fixes.

--- a/app/views/exchanges/hbx_profiles/_new_plan_year.html.slim
+++ b/app/views/exchanges/hbx_profiles/_new_plan_year.html.slim
@@ -18,7 +18,7 @@
       .input-group
         = text_field_tag :end_on, nil, class:'form-control', readonly: true
         span.input-group-addon
-          i.fas.fa-calendar-alt
+          i.glyphicon.glyphicon-calendar
     .col-md-4
       label[for="fullTimeEmployees" style="font-weight:bold"]
         = l10n("hbx_profiles.full_time_employees")
@@ -137,4 +137,5 @@ css:
     height: 34px;
     padding: 6px 12px;
     font-size: 14px;
+    width: 300px;
   }
